--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Task-1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPiJniL31qGJR0uloY18syX",
+      "authorship_tag": "ABX9TyPEcfnNgMYPPPlXYhV0ngLO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,10 @@
         "id": "Uj7yZRV0z2Hc"
       },
       "source": [
+        "Done by Hari Praneeth V\n",
+        "\n",
+        "https://github.com/vhpraneeth/The-Sparks-Foundation/blob/master/Task_1.ipynb\n",
+        "\n",
         "Prediction using Supervised ML\n",
         "\n",
         "● Predict the percentage of marks of an student based on the number of\n",
@@ -60,13 +64,12 @@
         "id": "H9HjQkQuzpD9"
       },
       "source": [
-        "# Importing all libraries required in this notebook\n",
         "import pandas as pd\n",
         "import numpy as np  \n",
         "import matplotlib.pyplot as plt  \n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,14 +83,12 @@
         }
       },
       "source": [
-        "# Reading data from remote link\n",
         "url = \"http://bit.ly/w-data\"\n",
-        "s_data = pd.read_csv(url)\n",
-        "print(\"Data imported successfully\")\n",
+        "scores_df = pd.read_csv(url)\n",
         "\n",
-        "s_data.head(10)"
+        "scores_df.head(10)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,13 +220,13 @@
       },
       "source": [
         "# Plotting the distribution of scores\n",
-        "s_data.plot(x='Hours', y='Scores', style='o')  \n",
-        "plt.title('Hours vs Percentage')  \n",
-        "plt.xlabel('Hours Studied')  \n",
-        "plt.ylabel('Percentage Score')  \n",
+        "scores_df.plot(x='Hours', y='Scores', style='o')  \n",
+        "plt.title('Hours vs Score')  \n",
+        "plt.xlabel('Hours')  \n",
+        "plt.ylabel('Score')  \n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,10 +269,10 @@
         "id": "8AVBt1b9iBBF"
       },
       "source": [
-        "X = s_data.iloc[:, :-1].values  \n",
-        "y = s_data.iloc[:, 1].values  "
+        "X = scores_df.iloc[:, :-1].values  \n",
+        "y = scores_df.iloc[:, 1].values  "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,10 +291,10 @@
       },
       "source": [
         "from sklearn.model_selection import train_test_split  \n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
-        "                            test_size=0.2, random_state=0) "
+        "X_train, X_test, y_train, y_test = \\\n",
+        "    train_test_split(X, y, test_size=0.2, random_state=0) "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -310,7 +311,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "14kGxZy5iHCl",
-        "outputId": "1dc3d30c-d498-46a2-df7f-99e54192db1a",
+        "outputId": "06354804-bb70-483b-f403-8afbd9a8062d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -319,12 +320,9 @@
       "source": [
         "from sklearn.linear_model import LinearRegression  \n",
         "regressor = LinearRegression()  \n",
-        "regressor.fit(X_train, y_train)\n",
-        "#regressor.fit(X, y)\n",
-        "\n",
-        "print(\"Training complete.\")"
+        "regressor.fit(X_train, y_train)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,22 +337,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "XBkv9aqoiJeM",
-        "outputId": "a615c115-75e6-44d2-ce74-1bb36cd8286f",
+        "outputId": "37f91f8f-42f2-4be2-8d3d-f259633765d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
         }
       },
       "source": [
-        "# Plotting the regression line\n",
-        "line = regressor.coef_*X+regressor.intercept_\n",
+        "# Plot the regression line\n",
+        "line = regressor.coef_*X + regressor.intercept_\n",
         "\n",
-        "# Plotting for the test data\n",
         "plt.scatter(X, y)\n",
         "plt.plot(X, line);\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -385,7 +382,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8Wp2Mg3MiSDc",
-        "outputId": "effc1680-9839-41c5-f16b-003dde7339dc",
+        "outputId": "90da09b4-2678-4adf-aea7-d746d0ad2526",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -395,7 +392,7 @@
         "print(X_test) # Testing data - In Hours\n",
         "y_pred = regressor.predict(X_test) # Predicting the scores"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +411,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "25t0vGaZiUM4",
-        "outputId": "c8b248e9-ad9b-4422-9de5-c77f72e3062e",
+        "outputId": "b24adb53-5142-4b42-928a-3babd128394d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -425,7 +422,7 @@
         "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred})  \n",
         "df "
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +492,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 51
         }
       ]
     },
@@ -503,7 +500,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "VL8pITvuiVv3",
-        "outputId": "f7349eec-39fe-4436-e6db-3944be104387",
+        "outputId": "d298f1c8-8a49-4330-ea21-ac44d87f0f66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -517,7 +514,7 @@
         "print(\"No of Hours = {}\".format(hours))\n",
         "print(\"Predicted Score = {}\".format(own_pred[0]))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,30 +534,28 @@
       "source": [
         "### **Evaluating the model**\n",
         "\n",
-        "The final step is to evaluate the performance of algorithm. This step is particularly important to compare how well different algorithms perform on a particular dataset. For simplicity here, we have chosen the mean square error. There are many such metrics."
+        "Find the accuracy of the model"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "btagdG2QiZjz",
-        "outputId": "519e30f3-b855-452b-95d1-52c4527a02f0",
+        "id": "IovgkMadkIu4",
+        "outputId": "184b789c-d7c2-4abb-f5ff-3b972d918fc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "from sklearn import metrics  \n",
-        "print('Mean Absolute Error:', \n",
-        "      metrics.mean_absolute_error(y_test, y_pred)) "
+        "print(\"Test set score: {:.2f}\".format(regressor.score(X_test, y_test)))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mean Absolute Error: 4.183859899002982\n"
+            "Test set score: 0.95\n"
           ],
           "name": "stdout"
         }
