--- a/Task_2.ipynb
+++ b/Task_2.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vhpraneeth/The-Sparks-Foundation/blob/master/Task_2\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vhpraneeth/The-Sparks-Foundation/blob/master/Task_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,23 +30,9 @@
         "id": "HJYzEy-6cFrK"
       },
       "source": [
-        "# Linear Regression with Python Scikit Learn \n",
+        "Task-2\n",
         "\n",
-        "\n",
-        "Here we are going to see how Python Scikit -Learn Library can be used to solve regression functions in Machine learning !!!\n",
-        "\n",
-        "## Simple Linear Regression \n",
-        "\n",
-        "In this task we will predict the percentage of marks that a student is expected to score based upon the number of hours they studied. This is a simple linear regression task as it involves just two variables."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2zggu5QYdNuu"
-      },
-      "source": [
-        "# CODE\n"
+        "Done by: Hari Praneeth V"
       ]
     },
     {
