--- a/Task_5.ipynb
+++ b/Task_5.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "TSF_Task_5",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZEmOQbgh1n2lQhQSLacQF",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNWz7VpHkxwd32j34rMH34k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +48,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,10 +62,12 @@
         }
       },
       "source": [
-        "Data=pd.read_csv('https://raw.githubusercontent.com/vhpraneeth/The-Sparks-Foundation/master/SampleSuperstore.csv')\n",
+        "url = 'https://raw.githubusercontent.com/vhpraneeth/The-Sparks-Foundation/master/SampleSuperstore.csv'\n",
+        "Data = pd.read_csv(url)\n",
+        "Data = Data.drop_duplicates()\n",
         "Data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,17 +212,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wBzpswkUPKAg"
-      },
-      "source": [
-        "Data=Data.drop_duplicates()"
-      ],
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "kfodzFAuPKCO",
         "outputId": "78275014-9109-47f3-f67c-cb0b7954ff95",
         "colab": {
@@ -228,12 +220,12 @@
         }
       },
       "source": [
-        "#correlation matrix:\n",
+        "# correlation matrix:\n",
         "plt.figure(figsize=(8,5))\n",
-        "correlation=Data.corr()\n",
-        "sns.heatmap(correlation,annot=True,cmap='Purples')"
+        "correlation = Data.corr()\n",
+        "sns.heatmap(correlation, annot=True, cmap='Purples')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,7 +268,7 @@
         "plt.figure()\n",
         "sns.pairplot(Data)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,12 +329,12 @@
       },
       "source": [
         "# Correlation matrix\n",
-        "plt.figure(figsize=(10,5))\n",
-        "sns.lineplot(x='Discount',y='Profit',data=Data)\n",
+        "plt.figure(figsize=(10, 5))\n",
+        "sns.lineplot(x='Discount', y='Profit', data=Data)\n",
         "plt.legend('Profit')\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -370,11 +362,11 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(30,13))\n",
+        "plt.figure(figsize=(30, 13))\n",
         "plt.plot(Data['Profit'], color='blue')\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -402,24 +394,23 @@
         }
       },
       "source": [
-        "\n",
         "%matplotlib inline\n",
-        "plt.figure(figsize=(20,6))\n",
-        "plt.subplot(1,2,1)\n",
-        "sns.countplot('Segment',data=Data)\n",
+        "plt.figure(figsize=(20, 6))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "sns.countplot('Segment', data=Data)\n",
         "plt.title('DISTRIBUTION OF SEGMENTS')\n",
-        "plt.xlabel('SEGMENT',fontsize=12)\n",
-        "plt.ylabel('COUNT',fontsize=12)\n",
+        "plt.xlabel('SEGMENT', fontsize=12)\n",
+        "plt.ylabel('COUNT', fontsize=12)\n",
         "plt.grid(alpha=0.3)\n",
-        "plt.subplot(1,2,2)\n",
-        "sns.countplot('Ship Mode',data=Data)\n",
+        "plt.subplot(1, 2, 2)\n",
+        "sns.countplot('Ship Mode', data=Data)\n",
         "plt.title('DISTRIBUTION OF SHIP MODE')\n",
-        "plt.ylabel('COUNT',fontsize=12)\n",
-        "plt.xlabel('SHIP MODE',fontsize=12)\n",
+        "plt.ylabel('COUNT', fontsize=12)\n",
+        "plt.xlabel('SHIP MODE', fontsize=12)\n",
         "plt.grid(alpha=0.3)\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,15 +461,15 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(30,10))\n",
+        "plt.figure(figsize=(30, 10))\n",
         "sns.countplot(Data['State'])\n",
-        "plt.xticks(fontsize=16,rotation=90)\n",
-        "plt.ylabel('COUNTS',fontsize=20)\n",
-        "plt.xlabel('STATES',fontsize=20)\n",
-        "plt.title('DISTRIBUTION OF STATES',fontsize=25);\n",
+        "plt.xticks(fontsize=16, rotation=90)\n",
+        "plt.ylabel('COUNTS', fontsize=20)\n",
+        "plt.xlabel('STATES', fontsize=20)\n",
+        "plt.title('DISTRIBUTION OF STATES', fontsize=25);\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,22 +517,22 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(20,6))\n",
-        "plt.subplot(1,2,1)\n",
-        "sns.countplot('Region',data=Data)\n",
+        "plt.figure(figsize=(20, 6))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "sns.countplot('Region', data=Data)\n",
         "plt.title('DISTRIBUTION OF REGIONS')\n",
-        "plt.xlabel('REGION',fontsize=12)\n",
-        "plt.ylabel('COUNT',fontsize=12)\n",
+        "plt.xlabel('REGION', fontsize=12)\n",
+        "plt.ylabel('COUNT', fontsize=12)\n",
         "plt.grid(alpha=0.3)\n",
-        "plt.subplot(1,2,2)\n",
-        "sns.countplot('Region',hue='Category',data=Data)\n",
+        "plt.subplot(1, 2, 2)\n",
+        "sns.countplot('Region', hue='Category', data=Data)\n",
         "plt.title('DISTRIBUTION OF REGIONS BASED ON CATEGORY')\n",
-        "plt.ylabel('COUNT',fontsize=12)\n",
-        "plt.xlabel('REGION',fontsize=12)\n",
+        "plt.ylabel('COUNT', fontsize=12)\n",
+        "plt.xlabel('REGION', fontsize=12)\n",
         "plt.grid(alpha=0.3)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,21 +582,21 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(20,10))\n",
-        "plt.subplot(2,1,1)\n",
-        "sns.countplot('Category',data=Data);\n",
+        "plt.figure(figsize=(20, 10))\n",
+        "plt.subplot(2, 1, 1)\n",
+        "sns.countplot('Category', data=Data);\n",
         "plt.title('DISTRIBUTION OF CATEGORY')\n",
         "plt.xlabel('CATEGORY')\n",
         "plt.ylabel('COUNT')\n",
         "plt.grid(alpha=0.3)\n",
-        "plt.subplot(2,1,2)\n",
-        "sns.countplot('Sub-Category',data=Data);\n",
+        "plt.subplot(2, 1, 2)\n",
+        "sns.countplot('Sub-Category', data=Data);\n",
         "plt.title('DISTRIBUTION OF SUB-CATEGORY')\n",
         "plt.xlabel('SUB-CATEGORY')\n",
         "plt.ylabel('COUNT')\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,14 +634,14 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(18,10))\n",
+        "plt.figure(figsize=(18, 10))\n",
         "sns.countplot('Category', hue='Sub-Category', data=Data);\n",
         "plt.title('DISTRIBUTION OF SUB-CATEGORY')\n",
         "plt.xlabel('SUB-CATEGORY')\n",
         "plt.ylabel('COUNT')\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,15 +689,15 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(30,10))\n",
-        "sns.barplot(x=Data['State'].sort_values(ascending=True),y=Data['Profit'])\n",
+        "plt.figure(figsize=(30, 10))\n",
+        "sns.barplot(x=Data['State'].sort_values(ascending=True), y=Data['Profit'])\n",
         "plt.title('DISTRIBUTION OF PROFITS BASED ON STATES', fontsize=20)\n",
         "plt.xticks(rotation=90, fontsize=15);\n",
-        "plt.xlabel('STATE',fontsize=15)\n",
-        "plt.ylabel('PROFIT',fontsize=15)\n",
+        "plt.xlabel('STATE', fontsize=15)\n",
+        "plt.ylabel('PROFIT', fontsize=15)\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -738,12 +729,12 @@
         "id": "IRSEQSB1QhWi"
       },
       "source": [
-        "C=Data[Data['Region']=='Central']\n",
-        "E=Data[Data['Region']=='East']\n",
-        "W=Data[Data['Region']=='West']\n",
-        "S=Data[Data['Region']=='South']"
+        "C = Data[Data['Region'] == 'Central']\n",
+        "E = Data[Data['Region'] == 'East']\n",
+        "W = Data[Data['Region'] == 'West']\n",
+        "S = Data[Data['Region'] == 'South']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,36 +748,36 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(20,5))\n",
-        "sns.barplot(x=C['State'].sort_values(ascending=True),y=C['Profit'])\n",
+        "plt.figure(figsize=(20, 5))\n",
+        "sns.barplot(x=C['State'].sort_values(ascending=True), y=C['Profit'])\n",
         "plt.title('DISTRIBUTION OF PROFITS BASED ON CENTRAL REGION', fontsize=20)\n",
         "plt.xticks(rotation=90, fontsize=15);\n",
-        "plt.xlabel('STATE',fontsize=15)\n",
-        "plt.ylabel('PROFIT',fontsize=15)\n",
+        "plt.xlabel('STATE', fontsize=15)\n",
+        "plt.ylabel('PROFIT', fontsize=15)\n",
         "plt.grid(alpha=0.3)\n",
-        "plt.figure(figsize=(20,5))\n",
-        "sns.barplot(x=E['State'].sort_values(ascending=True),y=E['Profit'])\n",
+        "plt.figure(figsize=(20, 5))\n",
+        "sns.barplot(x=E['State'].sort_values(ascending=True), y=E['Profit'])\n",
         "plt.title('DISTRIBUTION OF PROFITS BASED ON EASTERN REGION', fontsize=20)\n",
         "plt.xticks(rotation=90, fontsize=15);\n",
-        "plt.xlabel('STATE',fontsize=15)\n",
-        "plt.ylabel('PROFIT',fontsize=15)\n",
+        "plt.xlabel('STATE', fontsize=15)\n",
+        "plt.ylabel('PROFIT', fontsize=15)\n",
         "plt.grid(alpha=0.3)\n",
-        "plt.figure(figsize=(20,5))\n",
-        "sns.barplot(x=W['State'].sort_values(ascending=True),y=W['Profit'])\n",
+        "plt.figure(figsize=(20, 5))\n",
+        "sns.barplot(x=W['State'].sort_values(ascending=True), y=W['Profit'])\n",
         "plt.title('DISTRIBUTION OF PROFITS BASED ON WESTERN REGION', fontsize=20)\n",
         "plt.xticks(rotation=90, fontsize=15);\n",
-        "plt.xlabel('STATE',fontsize=15)\n",
-        "plt.ylabel('PROFIT',fontsize=15)\n",
+        "plt.xlabel('STATE', fontsize=15)\n",
+        "plt.ylabel('PROFIT', fontsize=15)\n",
         "plt.grid(alpha=0.3)\n",
-        "plt.figure(figsize=(20,5))\n",
-        "sns.barplot(x=S['State'].sort_values(ascending=True),y=S['Profit'])\n",
+        "plt.figure(figsize=(20, 5))\n",
+        "sns.barplot(x=S['State'].sort_values(ascending=True), y=S['Profit'])\n",
         "plt.title('DISTRIBUTION OF PROFITS BASED ON SOUTHERN REGION', fontsize=20)\n",
         "plt.xticks(rotation=90, fontsize=15);\n",
-        "plt.xlabel('STATE',fontsize=15)\n",
-        "plt.ylabel('PROFIT',fontsize=15)\n",
+        "plt.xlabel('STATE', fontsize=15)\n",
+        "plt.ylabel('PROFIT', fontsize=15)\n",
         "plt.grid(alpha=0.3)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
