--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Task-1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEcfnNgMYPPPlXYhV0ngLO",
+      "authorship_tag": "ABX9TyMBgIfhjOBCXKgT31kujQHt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,31 +31,9 @@
         "id": "Uj7yZRV0z2Hc"
       },
       "source": [
-        "Done by Hari Praneeth V\n",
+        "Task - 1\n",
         "\n",
-        "https://github.com/vhpraneeth/The-Sparks-Foundation/blob/master/Task_1.ipynb\n",
-        "\n",
-        "Prediction using Supervised ML\n",
-        "\n",
-        "● Predict the percentage of marks of an student based on the number of\n",
-        "study hours\n",
-        "\n",
-        "● This is a simple linear regression task as it involves just 2 variables.\n",
-        "\n",
-        "● You can use R, Python, SAS Enterprise Miner or any other tool\n",
-        "\n",
-        "● Data can be found at http://bit.ly/w-data\n",
-        "\n",
-        "● What will be predicted score if a student studies for 9.25 hrs/ day?\n",
-        "\n",
-        "● Sample Solution : https://bit.ly/2HxiGGJ\n",
-        "\n",
-        "● Task submission:\n",
-        "1. Host the code on GitHub Repository (public). Record the code and output\n",
-        "in a video. Post the video on YouTube\n",
-        "2. Share links of code (GitHub) and video (YouTube) as a post on YOUR\n",
-        "LinkedIn profile\n",
-        "3. Submit the LinkedIn link in Task Submission Form when shared with you."
+        "Done by Hari Praneeth V\n"
       ]
     },
     {
