--- a/Task_5.ipynb
+++ b/Task_5.ipynb
@@ -6,7 +6,7 @@
       "name": "TSF_Task_5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWz7VpHkxwd32j34rMH34k",
+      "authorship_tag": "ABX9TyP1oW3p31pWfgC8NprA3JvY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "6IV75LjfO3Kw"
       },
       "source": [
-        "Task-3\n",
+        "Task-5\n",
         "\n",
         "Done by: Hari Praneeth V"
       ]
@@ -443,7 +443,7 @@
         "id": "xCkwmKlDPXzW"
       },
       "source": [
-        "## OBSERVATION:\n",
+        "## Observation:\n",
         "1. From the above \"DISTRIBUTION OF SEGMENTS\" plot it is clear that the \"consumers\" are the highest buyers of goods and \"Home office\" are the least buyers of goods\n",
         "2. From the above \"DISTRIBUTION OF SHIP MODE\" plot, it is clear that the \"standard class\" mode is the highest mode for shipping goods and \"same day\" mode is the least mode for shipping goods\n",
         "\n",
@@ -720,7 +720,7 @@
         "id": "xhTdsx7yQgTV"
       },
       "source": [
-        "## PROFIT DISTRIBUTION BASED ON DIFFERNT REGIONS"
+        "## Profit Distribution Based On Different Regions"
       ]
     },
     {
